# PyWAC

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.en.md  README.md  RELEASE_NOTES.md  THIRDPARTY.md  build.bat  pypac_check.py  pyproject.toml  setup.py  test_package.py  test_process_specific.py  test_pypac.py  test_readme_samples.py  test_unified_recording.py
.claude/: settings.local.json
.github/: release-template.md
docs/: API_CLARIFICATION.md  API_REFERENCE.md  Documentation_Structure.md  PROCESS_LOOPBACK_INVESTIGATION.md  README.md  README_ja.md  STRUCTURE.md  Version_Management_Strategy.md  archive  callback_architecture_plan.md  implementation_analysis.md  process_loopback_implementation_plan.md  pywac_dataflow_and_issues.md  queue_based_implementation_plan.md  queue_implementation_summary.md  recording_api_analysis.md  technical_deep_dive.md  v0.4.1_implementation_summary.md  v0.4.2_unified_recording.md  version-management.md
docs/migrations/: v0.3.0-audiodata.md  v0.4.0-queue-architecture.md  v0.4.1-event-driven.md  v1.0.0-module-rename.md
docs/proposals/: 003-import-structure-refactoring.md  README.md
docs/research/: Process_Loopback_API_Research.md  README.md  recording_api_analysis.md
examples/: README.md  basic_usage.py  demo_audio_capture.py  gradio_demo.py  gradio_test_app_ja.py  package_demo.py  process_specific_recording.py  quick_test.py  record_app_audio.py  test_audiodata.py  volume_controller.py
examples/recordings/: .gitignore
pypac/: __init__.py  api.py  py.typed  recorder.py  sessions.py  utils.py
pypac.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
pypac/_native/: __init__.py
pywac/: __init__.py  api.py  audio_data.py  queue_streaming.py  recorder.py  sessions.py  unified_recording.py  utils.py
pywac/_native/: __init__.py
src/: audio_session_capture.cpp  process_loopback.cpp  process_loopback_queue.cpp  process_loopback_v2.cpp
tests/: test_audio_data.py  test_examples.py  test_import_structure.py  test_session_capture.py  test_session_simple.py  test_unified_recording.py
tools/: README.md  check_dll.py  debug_processes.py  pypac_check.py  test_pypac.py  test_pywac.py
